fix: set capslock and shiftl and shiftr interaction

--- a/virtual-keyboard/assets/scss/style.scss
+++ b/virtual-keyboard/assets/scss/style.scss
@@ -84,6 +84,6 @@
 	display: block;
 }
 
-.keyboard__span.remove{
+.keyboard__span_alt + .keyboard__span.remove {
 	display: none;
-}
+  }
